deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
   app: nginx-multitool
spec:
  replicas: 2
  selector:
   matchLabels:
     app: nginx-multitool
  template:
   metadata:
     labels:
      app: nginx-multitool
   spec:
    containers:
     - name: nginx
       image: nginx:latest
       ports:
        - containerPort: 80
