svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
  labels:
    app: nginx-multitool
spec:
  ports:
  - name: web 
    port: 80
    protocol: TCP
    nodePort: 30080
  selector:
     app: nginx-multitool
  type: NodePort
