svcnginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
  selector:
     app: nginx
  type: ClusterIP
